Добавлена страница редактирования

--- a/app/views/editor.scala.html
+++ b/app/views/editor.scala.html
@@ -5,6 +5,12 @@
 
 <form method="post">
     <p>
+        Заголовок отображаемый при поиске:
+    </p>
+    <p><input type="text" size="40" name="articletitle" id="articletitle">
+    </p>
+
+    <p>
         <textarea name="editor" id="editor"></textarea>
         <script>
                 CKEDITOR.replace( 'editor' );
