добавил работу со статьями и прочие мелкие изменения

--- a/app/views/editor.scala.html
+++ b/app/views/editor.scala.html
@@ -7,7 +7,7 @@
     <p>
         Заголовок отображаемый при поиске:
     </p>
-    <p><input type="text" size="40" name="noticeTitle" id="articletitle">
+    <p><input type="text" size="40" name="postTitle" id="articletitle">
     </p>
 
     <p>
