--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,22 +15,17 @@
     </head>
     <body onload="@bodyOnload">
     <header id="top_menu">
+
         <nav id="top_nav">
             <ul class="nav">
                 <li>
                     <a href="/">Главная</a>
                 </li>
                 <li>
-                    <a href="/">Статьи</a>
-                </li>
-                <li>
                     <a href="/about">Обо мне</a>
                 </li>
                 <li>
-                    <a href="/">Контакты</a>
-                </li>
-                <li>
-                    <a href="index.html">Обратная связь</a>
+                    <a href="mailto:umed48@@yandex.ru">Обратная связь</a>
                 </li>
             </ul>
         </nav>
@@ -40,22 +35,13 @@
         <div id="tips_content">
             <div class="tip">
                 <h3 style="padding-left:30px; padding-top:10px;">Последние статьи</h3>
-                <ul class="tips_list">
+
+                <ul class="tips_list" style="padding-bottom:20px;">
+                    @for(post <- controllers.Application.getLastPosts()){
                     <li>
-                        <a href="#">Знакомство с Android</a>
+                        <a href="/post/@post._1">@post._2</a>
                     </li>
-                    <li>
-                        <a href="#">Знакомство с Android</a>
-                    </li>
-                    <li>
-                        <a href="#">Знакомство с Android</a>
-                    </li>
-                    <li>
-                        <a href="#">Знакомство с Android</a>
-                    </li>
-                    <li>
-                        <a href="#">Знакомство с Android</a>
-                    </li>
+                    }
                 </ul>
             </div>
 
